--- a/aspnet-core/src/CoreTest.Core/Localization/SourceFiles/CoreTest.xml
+++ b/aspnet-core/src/CoreTest.Core/Localization/SourceFiles/CoreTest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <localizationDictionary culture="en">
   <texts>
+    <text name="AppName" value="FSOI" />
     <text name="HomePage" value="Home page" />
     <text name="About" value="About" />
     <text name="WellcomeMessage" value="Welcome to CoreTest!" />
